--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -171,7 +171,7 @@ body.bp-search.search-results #primary {
 
 .bboss_ajax_search_item {
     margin: 0;
-    
+
     > a {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -345,6 +345,32 @@ SEARCH RESULTS PAGE
 	margin-bottom: 0;
 }
 
+.bboss_search_page {
+	.results-group {
+		ul#activity-stream {
+			argin: 0;
+			padding: 0;
+			background: transparent;
+			border: 0;
+			box-shadow: none;
+
+			li.activity-item {
+
+				border: 0;
+				box-shadow: none;
+				margin: 0;
+
+				.activity-inner {
+					margin: 0;
+					padding: 0;
+					background: transparent;
+				}
+			}
+
+		}
+	}
+}
+
 .bboss_search_page .bp-navs ul li .count {
     margin-left: 6px;
 }
@@ -384,6 +410,8 @@ div.search_results .groups-list li .last-activity {
 
 .search_results {
     clear: both;
+
+
 }
 
 .bboss_search_results_wrapper .results-group-members {
