--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -348,7 +348,7 @@ SEARCH RESULTS PAGE
 .bboss_search_page {
 	.results-group {
 		ul#activity-stream {
-			argin: 0;
+			margin: 0;
 			padding: 0;
 			background: transparent;
 			border: 0;
