--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -6983,7 +6983,7 @@ SEARCH RESULTS PAGE
 }
 
 .bboss_search_page .results-group ul#activity-stream {
-  argin: 0;
+  margin: 0;
   padding: 0;
   background: transparent;
   border: 0;
