--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -6805,10 +6805,6 @@ fieldset div.avatar {
 /* +++++++++++++++++++++++++++++++++++++++++
 AJAX SEARCH
 +++++++++++++++++++++++++++++++++++++++++ */
-body.bp-search.search-results #primary {
-  width: 100%;
-}
-
 .bboss_ajax_search_item {
   margin: 0;
 }
@@ -6980,6 +6976,26 @@ SEARCH RESULTS PAGE
   text-transform: capitalize;
   float: right;
   margin-bottom: 0;
+}
+
+.bboss_search_page .results-group ul#activity-stream {
+  margin: 0;
+  padding: 0;
+  background: transparent;
+  border: 0;
+  box-shadow: none;
+}
+
+.bboss_search_page .results-group ul#activity-stream li.activity-item {
+  border: 0;
+  box-shadow: none;
+  margin: 0;
+}
+
+.bboss_search_page .results-group ul#activity-stream li.activity-item .activity-inner {
+  margin: 0;
+  padding: 0;
+  background: transparent;
 }
 
 .bboss_search_page .bp-navs ul li .count {
