updated search css class names

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -165,7 +165,7 @@
 AJAX SEARCH
 +++++++++++++++++++++++++++++++++++++++++ */
 
-.bboss_ajax_search_item {
+.bp-search-ajax-item {
     margin: 0;
 
     > a {
@@ -221,7 +221,7 @@ AJAX SEARCH
 	text-decoration: none;
 }
 
-.bb-global-search-ac.ui-autocomplete {
+.bp-search-ac.ui-autocomplete {
 	border-radius: 0;
 	-webkit-box-shadow: 0 2px 3px 0 rgba(50, 50, 50, 0.4);
 	-moz-box-shadow: 0 2px 3px 0 rgba(50, 50, 50, 0.4);
@@ -239,11 +239,11 @@ AJAX SEARCH
 }
 
 /* Its just an helper we don't want to show it. */
-.bb-global-search-ac .x {
+.bp-search-ac .x {
     display: none !important;
 }
 
-.bb-global-search-ac li.bbls-category {
+.bp-search-ac li.bbls-category {
 	font-weight: 600;
 	padding: 14px 10px 5px;
 	position: relative;
@@ -251,53 +251,53 @@ AJAX SEARCH
 	box-sizing: border-box;
 }
 
-.bb-global-search-ac li.bbls-category a {
+.bp-search-ac li.bbls-category a {
 	font-weight: 600;
 }
 
-.bb-global-search-ac li:not(.bbls-category) {
+.bp-search-ac li:not(.bbls-category) {
 	padding: 0 10px;
 }
 
-.bb-global-search-ac li:not(.bbls-category) .bboss_ajax_search_item {
+.bp-search-ac li:not(.bbls-category) .bp-search-ajax-item {
     padding: 10px 0;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item:last-child .bboss_ajax_search_item,
-.bb-global-search-ac .bbls-category + li .bboss_ajax_search_item {
+.bp-search-ac.ui-menu .ui-menu-item:last-child .bp-search-ajax-item,
+.bp-search-ac .bbls-category + li .bp-search-ajax-item {
 	padding-top: 9px;
 }
 
-.bb-global-search-ac .bbls-category:not(:first-child) {
+.bp-search-ac .bbls-category:not(:first-child) {
 	border-top: 1px solid #e5e5e5;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-divider {
+.bp-search-ac.ui-menu .ui-menu-divider {
 	border-width: 0;
 	margin: 0;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item.ui-state-focus {
+.bp-search-ac.ui-menu .ui-menu-item.ui-state-focus {
 	border: none;
 	color: inherit;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item {
+.bp-search-ac.ui-menu .ui-menu-item {
 	list-style-image: none;
 	box-sizing: border-box;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item.ui-state-focus,
-.bb-global-search-ac.ui-menu .ui-menu-item.ui-state-hover,
-.bb-global-search-ac.ui-menu .ui-menu-item:hover {
+.bp-search-ac.ui-menu .ui-menu-item.ui-state-focus,
+.bp-search-ac.ui-menu .ui-menu-item.ui-state-hover,
+.bp-search-ac.ui-menu .ui-menu-item:hover {
 	background: #f4f5f6;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item:last-child {
+.bp-search-ac.ui-menu .ui-menu-item:last-child {
 	padding: 0;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item:last-child .bboss_ajax_search_item {
+.bp-search-ac.ui-menu .ui-menu-item:last-child .bp-search-ajax-item {
 	padding: 0;
 	border-top: 1px solid #e5e5e5;
 	border-bottom: 0;
@@ -305,24 +305,24 @@ AJAX SEARCH
 	top: -1px;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item .bboss_ajax_search_item.noresult {
+.bp-search-ac.ui-menu .ui-menu-item .bp-search-ajax-item.noresult {
 	padding: 13px 7px 11px;
 }
 
-.bb-global-search-ac.ui-menu .ui-menu-item:last-child .bboss_ajax_search_item a {
+.bp-search-ac.ui-menu .ui-menu-item:last-child .bp-search-ajax-item a {
     color: inherit;
     display: block;
     padding: 9px 10px;
     text-align: center;
 }
 
-.bb-global-search-ac.ui-menu .ui-state-focus {
+.bp-search-ac.ui-menu .ui-state-focus {
 	margin: 0;
 }
 
 @media screen and (max-width: 720px) {
 
-	.bb-global-search-ac.ui-autocomplete {
+	.bp-search-ac.ui-autocomplete {
 		overflow-y: scroll;
 	}
 }
@@ -341,7 +341,7 @@ SEARCH RESULTS PAGE
 	margin-bottom: 0;
 }
 
-.bboss_search_page {
+.bp-search-page {
 	.results-group {
 		ul#activity-stream {
 			margin: 0;
@@ -367,11 +367,11 @@ SEARCH RESULTS PAGE
 	}
 }
 
-.bboss_search_page .bp-navs ul li .count {
+.bp-search-page .bp-navs ul li .count {
     margin-left: 6px;
 }
 
-.bboss-results-wrap {
+.bp-search-results-wrap {
     .results-group-header {
         border-bottom: 1px solid #ccc;
         display: flex;
@@ -399,7 +399,7 @@ div.search_results .groups-list li .last-activity {
 	margin-top: 0;
 }
 
-.bboss_search_results_wrapper .bboss_search_form_wrapper {
+.bp-search-results-wrapper .bboss_search_form_wrapper {
     float: left;
 	margin: 0 0 20px;
 }
@@ -410,11 +410,11 @@ div.search_results .groups-list li .last-activity {
 
 }
 
-.bboss_search_results_wrapper .results-group-members {
+.bp-search-results-wrapper .results-group-members {
 	margin-top: 2em;
 }
 
-.bboss_search_item {
+.bp-search-item {
 	margin: 0 0 20px;
 	padding: 0 0 20px;
 	border-bottom: 1px solid #eee;
@@ -429,7 +429,7 @@ div.search_results .groups-list li .last-activity {
 
 /* Auto Complete Menu */
 
-.bb-global-search-ac .loading-msg {
+.bp-search-ac .loading-msg {
 	padding: 20px;
 	white-space: nowrap;
 	font-size: 12px;
@@ -439,7 +439,7 @@ div.search_results .groups-list li .last-activity {
 	justify-content: center;
 }
 
-.bb-global-search-ac .loading-msg span {
+.bp-search-ac .loading-msg span {
 	background: url(../images/spinner.png) no-repeat center;
 	background-size: 100% 100%;
 	width: 19px;
@@ -474,7 +474,7 @@ div.search_results .groups-list li .last-activity {
 * this will be added when ajax select focus item
 **/
 
-.bb-global-search-ac .ui-corner-all {
+.bp-search-ac .ui-corner-all {
 	display: none;
 }
 
@@ -535,7 +535,7 @@ div.search_results .groups-list li .last-activity {
 
 /** BuddyPress Nouveau Template Packs */
 
-.bboss-results-list .bboss_search_item {
+.bp-search-results-list .bp-search-item {
     margin: 0;
     padding: 15px 0;
 
@@ -580,7 +580,7 @@ div.search_results .groups-list li .last-activity {
     }
 }
 
-.bboss_search_results_wrapper.bp-search-no-results {
+.bp-search-results-wrapper.bp-search-no-results {
     display: flex;
     flex-flow: column-reverse;
 
