--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -7028,7 +7028,7 @@ div.search_results .groups-list li .last-activity {
   margin-top: 0;
 }
 
-.bp-search-results-wrapper .bboss_search_form_wrapper {
+.bp-search-results-wrapper .bp-search-form-wrapper {
   float: right;
   margin: 0 0 20px;
 }
