--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -399,7 +399,7 @@ div.search_results .groups-list li .last-activity {
 	margin-top: 0;
 }
 
-.bp-search-results-wrapper .bboss_search_form_wrapper {
+.bp-search-results-wrapper .bp-search-form-wrapper {
     float: left;
 	margin: 0 0 20px;
 }
