search result pagination fix

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -377,6 +377,10 @@ SEARCH RESULTS PAGE
         display: flex;
         align-items: center;
         padding-bottom: 5px;
+		
+		.view-all-link-hidden {
+			display: none;
+		}
     }
 
     .results-group-title {
