--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -6154,8 +6154,8 @@ button[data-bp-close]:hover {
 }
 
 .buddypress-wrap .grid.bp-list.members-group-list li.item-entry-header {
-  max-width: 100%;
-  flex: 100%;
+  max-width: 100% !important;
+  flex: 100% !important;
 }
 
 .buddypress-wrap .blogs-list.grid.two > li .blogs-title {
