--- a/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
@@ -312,11 +312,19 @@
 		} // close > li
 	} // close .grid.bp-list
 
-	.grid.bp-list.members-group-list {
+	#members-list.bp-list.members-group-list {
 		li {
 			&.item-entry-header {
-				max-width: 100% !important;
-				flex: 100% !important;
+				margin: 20px 0;
+			}
+		}
+	}
+
+	#members-list.grid.bp-list.members-group-list {
+		li {
+			&.item-entry-header {
+				max-width: 100%;
+				flex: 100%;
 			}
 		}
 	}
