Change cover image to "Cover Photo"

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_cover_image.scss
@@ -1,10 +1,10 @@
-// Cover image container generic styles.
+// cover photo container generic styles.
 // These properties manage the required positioning of
 // the image container overlay.
 // @version 3.0.0
 
 /*
-* Default required cover image rules
+* Default required cover photo rules
 */
 
 #cover-image-container {
@@ -54,5 +54,5 @@
 }
 
 /*
-* end cover image block
+* end cover photo block
 */
