--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -263,7 +263,7 @@ body.register .buddypress-wrap .page ul {
 	list-style: none;
 }
 
-// Avatars & Cover Image
+// Avatars & Cover Photo
 
 .buddypress-wrap {
 
