--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -2278,7 +2278,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 /*
-* Default required cover image rules
+* Default required cover photo rules
 */
 #cover-image-container {
   flex: 0 0 100%;
@@ -2327,7 +2327,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 /*
-* end cover image block
+* end cover photo block
 */
 /**
 *-----------------------------------------------------
