--- a/src/bp-templates/bp-nouveau/sass/buddypress.scss
+++ b/src/bp-templates/bp-nouveau/sass/buddypress.scss
@@ -227,7 +227,7 @@ Hello, this is the BuddyPress Nouveau stylesheet.
 
 @import "../common-styles/_bp_item_header_general";
 
-// Import Cover Image container defaults
+// Import Cover Photo container defaults
 
 @import "../common-styles/_bp_cover_image";
 
