--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -2305,7 +2305,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 /*
-* Default required cover image rules
+* Default required cover photo rules
 */
 #cover-image-container {
   flex: 0 0 100%;
@@ -2354,7 +2354,7 @@ body.no-js .single-item-header .js-self-profile-button {
 }
 
 /*
-* end cover image block
+* end cover photo block
 */
 /**
 *-----------------------------------------------------
